src/main/resources/containers/nginx/manifests/full-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginxtest
  name: nginxtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxtest
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxtest
    spec:
      containers:
        - image: registry.gitlab.com/snaphashpubic/nginxtest:latest
          imagePullPolicy: ""
          name: nginxtest
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginxtest
spec:
  type: NodePort
  selector:
    app: nginxtest
  ports:
    - name: nginxtest
      protocol: TCP
      nodePort: 30080
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxtest
spec:
  rules:
    - host: 88.121.175.50.nip.io
      http:
        paths: /
        backend:
          sericeName: nginxtest
          servicePort: 80
