src/main/resources/containers/nginx/manifests/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxtest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nginxtest.info
      http:
        paths:
          - path: /
            backend:
              serviceName: nginxtest
              servicePort: 80
